@startuml

title __STATONOMINATIVO's Class Diagram__\n

  namespace com.woonders.lacemsjsf.view.nominativo {
    namespace statonominativo {
      class com.woonders.lacemsjsf.view.nominativo.statonominativo.DatatableStatoNominativoView {
          {static} + JSF_NAME : String
          {static} + NAME : String
          - clienteViewModelLazyDataModel : LazyDataModel<ClienteViewModel>
          - statoNominativo : String
          + getAziendaSelectionView()
          + getClienteViewModelLazyDataModel()
          + getDashboardNominativoService()
          + getHttpSessionUtil()
          + getPassaggioParametriUtils()
          + getSelectedNominativoViewModel()
          + getStatoNominativo()
          + getStatoNominativoService()
          + init()
          + onRowSelect()
          + setAziendaSelectionView()
          + setClienteViewModelLazyDataModel()
          + setDashboardNominativoService()
          + setHttpSessionUtil()
          + setPassaggioParametriUtils()
          + setSelectedNominativoViewModel()
          + setStatoNominativo()
          + setStatoNominativoService()
          - retrieveNominativiByStatoNominativo()
      }
    }
  }
  

  namespace com.woonders.lacemsjsf.view.nominativo {
    namespace statonominativo {
      class com.woonders.lacemsjsf.view.nominativo.statonominativo.StatoNominativoView {
          {static} + JSF_NAME : String
          {static} + NAME : String
          - whiteColor : String
          - yellowColor : String
          + getAziendaSelectionView()
          + getColorIcon()
          + getHttpSessionUtil()
          + getPassaggioParametriUtils()
          + getStatoNominativoService()
          + getStatoNominativoSize()
          + getWhiteColor()
          + getYellowColor()
          + putStatoNominativoParameter()
          + setAziendaSelectionView()
          + setHttpSessionUtil()
          + setPassaggioParametriUtils()
          + setStatoNominativoService()
      }
    }
  }
  

  com.woonders.lacemsjsf.view.nominativo.statonominativo.DatatableStatoNominativoView .up.|> java.io.Serializable
  com.woonders.lacemsjsf.view.nominativo.statonominativo.DatatableStatoNominativoView o-- com.woonders.lacemsjsf.view.aziendaselection.AziendaSelectionView : aziendaSelectionView
  com.woonders.lacemsjsf.view.nominativo.statonominativo.DatatableStatoNominativoView o-- com.woonders.lacemscommon.service.DashboardNominativoService : dashboardNominativoService
  com.woonders.lacemsjsf.view.nominativo.statonominativo.DatatableStatoNominativoView o-- com.woonders.lacemsjsf.util.HttpSessionUtil : httpSessionUtil
  com.woonders.lacemsjsf.view.nominativo.statonominativo.DatatableStatoNominativoView o-- com.woonders.lacemsjsf.util.PassaggioParametriUtils : passaggioParametriUtils
  com.woonders.lacemsjsf.view.nominativo.statonominativo.DatatableStatoNominativoView o-- com.woonders.lacemscommon.app.viewmodel.ClienteViewModel : selectedNominativoViewModel
  com.woonders.lacemsjsf.view.nominativo.statonominativo.DatatableStatoNominativoView o-- com.woonders.lacemscommon.service.StatoNominativoService : statoNominativoService
  com.woonders.lacemsjsf.view.nominativo.statonominativo.StatoNominativoView .up.|> java.io.Serializable
  com.woonders.lacemsjsf.view.nominativo.statonominativo.StatoNominativoView o-- com.woonders.lacemsjsf.view.aziendaselection.AziendaSelectionView : aziendaSelectionView
  com.woonders.lacemsjsf.view.nominativo.statonominativo.StatoNominativoView o-- com.woonders.lacemsjsf.util.HttpSessionUtil : httpSessionUtil
  com.woonders.lacemsjsf.view.nominativo.statonominativo.StatoNominativoView o-- com.woonders.lacemsjsf.util.PassaggioParametriUtils : passaggioParametriUtils
  com.woonders.lacemsjsf.view.nominativo.statonominativo.StatoNominativoView o-- com.woonders.lacemscommon.service.StatoNominativoService : statoNominativoService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
